# atcoder-haskell

./: .envrc  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  cabal.project  flake.nix  fourmolu.yaml  new.sh  package-lock.json  run.sh  submit.sh  test.sh
.github/workflows/: ci.yml  update-flake-lock.yml
acc-config/: Main.hs  config.json  hie.yaml  package.yaml  template.cabal  template.json
acc-config/haskell/: Main.hs  acc-template.cabal  template.cabal  template.json
cabal-template/: Main.hs  hie.yaml  task.cabal
contests/abc163/: abc163.cabal  contest.acc.json  hie.yaml
contests/abc163/a/: Main.hs
contests/abc169/: abc169.cabal  contest.acc.json  hie.yaml
contests/abc169/a/: Main.hs
contests/abc172/: abc172.cabal  contest.acc.json  hie.yaml
contests/abc172/a/: Main.hs
contests/abc174/: abc174.cabal  contest.acc.json  hie.yaml
contests/abc174/a/: Main.hs
contests/abc177/: abc177.cabal  hie.yaml
contests/abc177/c/: Main.hs
contests/abc177/d/: Main.hs
contests/abc177/e/: Main.hs
contests/abc180/: abc180.cabal  contest.acc.json  hie.yaml
contests/abc180/a/: Main.hs
contests/abc184/: abc184.cabal  contest.acc.json  hie.yaml  package.yaml  stack.yaml
contests/abc184/a/: Main.hs
contests/abc184/c/: Main.hs
contests/abc211/: abc211.cabal  contest.acc.json  hie.yaml
contests/abc211/a/: Main.hs
contests/abc231/: abc231.cabal  contest.acc.json  hie.yaml
contests/abc231/a/: Main.hs
contests/abc269/: abc269.cabal  contest.acc.json  hie.yaml
contests/abc269/a/: Main.hs
contests/abc370/: abc370.cabal  contest.acc.json  hie.yaml  package.yaml
contests/abc370/b/: Main.hs
contests/abc370/d/: Main.hs
contests/abc375/: abc375.cabal  contest.acc.json  hie.yaml  package.yaml
contests/abc375/a/: Main.hs
contests/abc375/b/: Main.hs
contests/abc376/: abc376.cabal  contest.acc.json  hie.yaml  package.yaml
contests/abc376/a/: Main.hs
contests/abc376/b/: Main.hs
contests/abc376/c/: Main.hs
contests/abc378/: abc378.cabal  contest.acc.json  hie.yaml  package.yaml
contests/abc378/a/: Main.hs
contests/abc378/b/: Main.hs
contests/abc379/: abc379.cabal  contest.acc.json  hie.yaml  package.yaml
contests/abc379/a/: Main.hs
contests/abc379/b/: Main.hs
contests/abc382/: abc382.cabal  contest.acc.json  hie.yaml  package.yaml
contests/abc382/a/: Main.hs
contests/abc382/b/: Main.hs
contests/abc382/e/: Main.hs
contests/abc387/: abc387.cabal  contest.acc.json  hie.yaml
contests/abc387/a/: Main.hs
contests/abc406/: abc406.cabal  hie.yaml
contests/abc406/a/: Main.hs
contests/abc406/b/: Main.hs
contests/abc406/c/: Main.hs
contests/abc407/: abc407.cabal  hie.yaml
contests/abc407/a/: Main.hs
contests/abc407/b/: Main.hs
contests/abc407/c/: Main.hs
contests/abc408/: abc408.cabal  hie.yaml
contests/abc408/a/: Main.hs
contests/abc408/b/: Main.hs
contests/abc408/c/: Main.hs
contests/abc408/d/: Main.hs
contests/abc409/: abc409.cabal  hie.yaml
contests/abc409/a/: Main.hs
contests/abc409/b/: Main.hs
contests/abc409/c/: Main.hs
contests/abs/: abs.cabal  contest.acc.json  hie.yaml  package.yaml
contests/abs/abc049c/: Main.hs
contests/abs/abc081a/: Main.hs
contests/abs/abc081b/: Main.hs
contests/abs/abc083b/: Main.hs
contests/abs/abc085b/: Main.hs
contests/abs/abc085c/: Main.hs
contests/abs/abc086a/: Main.hs
contests/abs/abc086c/: Main.hs
contests/abs/abc087b/: Main.hs
contests/abs/abc088b/: Main.hs
contests/abs/practicea/: Main.hs
contests/joi2022yo1b/: contest.acc.json  hie.yaml  joi2022yo1b.cabal
contests/joi2022yo1b/a/: Main.hs
contests/joi2023yo1b/: contest.acc.json  hie.yaml  joi2023yo1b.cabal
contests/joi2023yo1b/a/: Main.hs
contests/joi2023yo1b/c/tests/: sample-2.in  sample-3.in
contests/math-and-algorithm/: contest.acc.json  hie.yaml  math-and-algorithm.cabal
contests/math-and-algorithm/001/: Main.hs
contests/math-and-algorithm/002/: Main.hs
contests/math-and-algorithm/006/: Main.hs
contests/math-and-algorithm/028/: Main.hs
contests/past15-open/: contest.acc.json  hie.yaml  past15-open.cabal
contests/past15-open/a/: Main.hs
contests/tessoku-book/: contest.acc.json  hie.yaml  tessoku-book.cabal
contests/tessoku-book/a01/: Main.hs
contests/tessoku-book/b01/: Main.hs
contests/typical90/: contest.acc.json  hie.yaml  package.yaml  typical90.cabal
contests/typical90/002/: Main.hs
contests/typical90/004/: Main.hs
contests/typical90/010/: Main.hs
contests/typical90/021/: Main.hs
contests/typical90/022/: Main.hs
contests/typical90/024/: Main.hs
contests/typical90/027/: Main.hs
contests/typical90/033/: Main.hs
contests/typical90/055/: Main.hs
contests/typical90/061/: Main.hs
contests/typical90/067/: Main.hs
contests/typical90/078/: Main.hs
nix/: aclogin.nix  atcoder-cli.nix
scripts/: copy.sh  new.sh  run.sh  setup-acc-config.sh  test.sh
stack-template/: hie.yaml  package.yaml
