cabal-version: 3.0
name:          contest-template
version:       0.1.0.0
build-type:    Simple

common deps
  build-depends:
    , array
    , attoparsec
    , base
    , bytestring
    , containers
    , deepseq
    , extra
    , mtl
    , parsec
    , text
    , transformers
    , unordered-containers
    , vector

  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -optc-O3
