cabal-version: 3.0
name:          abs
version:       0.1.0.0
build-type:    Simple

common deps
  build-depends:
    , base
    , array
    , attoparsec
    , bytestring
    , containers
    , deepseq
    , extra
    , mtl
    , parsec
    , text
    , transformers
    , unordered-containers
    , vector

  default-language: GHC2021
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -optc-O3

executable practicea
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: practicea

executable abc086a
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc086a

executable abc081a
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc081a

executable abc081b
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc081b

executable abc087b
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc087b

executable abc083b
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc083b

executable abc088b
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc088b

executable abc085b
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc085b

executable abc085c
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc085c

executable abc049c
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc049c

executable abc086c
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: abc086c

