cabal-version: 3.0
name:          joi2022yo1b
version:       0.1.0.0
build-type:    Simple

common deps
  build-depends:
    , array
    , attoparsec
    , base
    , bytestring
    , containers
    , deepseq
    , extra
    , mtl
    , parsec
    , text
    , transformers
    , unordered-containers
    , vector

  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall -O2 -optc-O3

library
  import:          deps
  exposed-modules:

executable a
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: a

executable b
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: b

executable c
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: c

executable d
  import:         deps
  main-is:        Main.hs
  hs-source-dirs: d
